[package]
name = "mpd-webext"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = { version = "0.7.9", features = ["query"] }
axum-messages = "0.7.0"
deadqueue = { version = "0.2.4", features = ["unlimited"] }
maud = { version = "0.26.0", features = ["axum"] }
mpd_client = { version = "1.4.1", features = ["chrono"] }
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "signal", "process", "fs", "time"] }
tokio-util = "0.7.13"
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["trace", "timeout"] }
tower-sessions = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
